# streaming-platform

./: LICENSE  README.md  bootstrap_scaffold.py
libs/common-py/: README.md  pyproject.toml
libs/common-py/common/: __init__.py
libs/common-py/common/auth/: jwt.py
libs/common-py/common/config/: settings.py
libs/common-py/common/events/: kafka.py
libs/common-py/common/http/: client.py
libs/common-py/common/logging/: logger.py
libs/common-py/common/middleware/: correlation.py
services/analytics-service/: Dockerfile  pyproject.toml
services/analytics-service/app/: main.py  settings.py
services/analytics-service/app/api/v1/: routes_health.py
services/analytics-service/app/domain/: value_objects.py
services/billing-service/: pyproject.toml
services/billing-service/app/: main.py  settings.py
services/catalog-service/: pyproject.toml
services/catalog-service/app/: main.py  settings.py
services/catalog-service/app/domain/: errors.py
services/catalog-service/app/schemas/: __init__.py
services/catalog-service/tests/unit/: test_health.py
services/identity-service/: pyproject.toml
services/identity-service/app/: main.py  settings.py
services/identity-service/app/api/v1/: routes_auth.py
services/identity-service/app/domain/: entities.py
services/media-service/: pyproject.toml
services/media-service/app/: main.py  settings.py
services/playback-service/: pyproject.toml
services/playback-service/app/: main.py  settings.py
services/reco-service/: pyproject.toml
services/reco-service/app/: main.py  settings.py
(+7 files in other folders)
