# libs/common-py/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-py"
version = "0.1.0"
description = "Librería compartida (settings, auth, logging, middleware, http, eventos)"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
  "pydantic-settings>=2",
  "structlog>=24",
  "PyJWT[crypto]>=2.8",
  "httpx>=0.27",
]
