# services/identity-service/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identity-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2",
  "pydantic-settings>=2",
  "structlog>=24",
  "httpx>=0.27",
  "sqlalchemy>=2",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "redis>=5",
  "aiokafka>=0.10",
  "common-py @ file://C:/Users/porru/OneDrive/Desktop/streaming-platform/libs/common-py",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "black", "mypy", "types-PyYAML"]
